corrected intrinsic_dim function (added normalization before PCA)

--- a/Stats/cartolastd_stats.ipynb
+++ b/Stats/cartolastd_stats.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -162,16 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def intrisic_dim(dataframe, target_variance):\n",
+    "    dataframe = StandardScaler().fit_transform(dataframe)\n",
     "    pca = PCA()\n",
     "\n",
-    "    principalComponents = pca.fit_transform(df)\n",
+    "    principalComponents = pca.fit_transform(dataframe)\n",
     "\n",
     "    list_variance = pca.explained_variance_ratio_\n",
     "\n",
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "scrolled": false
    },
@@ -201,7 +203,7 @@
       "Registers per time-step (deviation): 0.0\n",
       "Total dimensions: 17\n",
       "Intrinsic dimensions: 9\n",
-      "Total variance: 0.905097668219874\n"
+      "Total variance: 0.9050976682198744\n"
      ]
     }
    ],
