--- a/Stats/esc50_stats.ipynb
+++ b/Stats/esc50_stats.ipynb
@@ -175,12 +175,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def intrisic_dim(dataframe, target_variance):\n",
+    "    dataframe = StandardScaler().fit_transform(dataframe)\n",
     "    pca = PCA()\n",
     "\n",
-    "    principalComponents = pca.fit_transform(df)\n",
+    "    principalComponents = pca.fit_transform(dataframe)\n",
     "\n",
     "    list_variance = pca.explained_variance_ratio_\n",
     "\n",
@@ -210,7 +212,7 @@
       "Registers per time-step (deviation): 0.0\n",
       "Total dimensions: 128\n",
       "Intrinsic dimensions: 3\n",
-      "Total variance: 0.9246379085688299\n"
+      "Total variance: 0.9200499583714605\n"
      ]
     }
    ],
