--- a/Stats/quickdraw_stats.ipynb
+++ b/Stats/quickdraw_stats.ipynb
@@ -187,12 +187,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def intrisic_dim(dataframe, target_variance):\n",
+    "    dataframe = StandardScaler().fit_transform(dataframe)\n",
     "    pca = PCA()\n",
     "\n",
-    "    principalComponents = pca.fit_transform(df)\n",
+    "    principalComponents = pca.fit_transform(dataframe)\n",
     "\n",
     "    list_variance = pca.explained_variance_ratio_\n",
     "\n",
@@ -219,8 +221,8 @@
       "Registers per time-step (median): 130.0\n",
       "Registers per time-step (deviation): 243.3966159117527\n",
       "Total dimensions: 784\n",
-      "Intrinsic dimensions: 332\n",
-      "Total variance: 0.9002481411258388\n"
+      "Intrinsic dimensions: 356\n",
+      "Total variance: 0.9004783755811413\n"
      ]
     }
    ],
