--- a/Stats/walk_stats.ipynb
+++ b/Stats/walk_stats.ipynb
@@ -164,14 +164,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def intrisic_dim(dataframe, target_variance):\n",
+    "    dataframe = StandardScaler().fit_transform(dataframe)\n",
     "    pca = PCA()\n",
     "\n",
-    "    principalComponents = pca.fit_transform(df)\n",
+    "    principalComponents = pca.fit_transform(dataframe)\n",
     "\n",
     "    list_variance = pca.explained_variance_ratio_\n",
+    "\n",
     "    final_var = 0\n",
     "    dims = 0\n",
     "    for var in list_variance:\n",
@@ -196,7 +199,7 @@
       "Registers per time-step (deviation): 0.0\n",
       "Total dimensions: 100\n",
       "Intrinsic dimensions: 30\n",
-      "Total variance: 0.902423473071131\n"
+      "Total variance: 0.9023431243452701\n"
      ]
     }
    ],
