--- a/Stats/fashion_stats.ipynb
+++ b/Stats/fashion_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        " '/home/ipsilva/Repositories/dynamic-projections/Datasets/cartolastd']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "'/home/ipsilva/Repositories/dynamic-projections/Datasets/fashion'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        " 'sandal-416-2.png']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -183,16 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def intrisic_dim(dataframe, target_variance):\n",
+    "    dataframe = StandardScaler().fit_transform(dataframe)\n",
     "    pca = PCA()\n",
     "\n",
-    "    principalComponents = pca.fit_transform(df)\n",
+    "    principalComponents = pca.fit_transform(dataframe)\n",
     "\n",
     "    list_variance = pca.explained_variance_ratio_\n",
     "\n",
@@ -208,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -219,8 +221,8 @@
       "Registers per time-step (median): 1000.0\n",
       "Registers per time-step (deviation): 0.0\n",
       "Total dimensions: 784\n",
-      "Intrinsic dimensions: 491\n",
-      "Total variance: 0.9002367661062332\n"
+      "Intrinsic dimensions: 502\n",
+      "Total variance: 0.9004330683058499\n"
      ]
     }
    ],
