--- a/Stats/gaussians_stats.ipynb
+++ b/Stats/gaussians_stats.ipynb
@@ -168,12 +168,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def intrisic_dim(dataframe, target_variance):\n",
+    "    dataframe = StandardScaler().fit_transform(dataframe)\n",
     "    pca = PCA()\n",
     "\n",
-    "    principalComponents = pca.fit_transform(df)\n",
+    "    principalComponents = pca.fit_transform(dataframe)\n",
     "\n",
     "    list_variance = pca.explained_variance_ratio_\n",
     "\n",
@@ -200,8 +202,8 @@
       "Registers per time-step (median): 2000.0\n",
       "Registers per time-step (deviation): 0.0\n",
       "Total dimensions: 100\n",
-      "Intrinsic dimensions: 78\n",
-      "Total variance: 0.9037835221683923\n"
+      "Intrinsic dimensions: 85\n",
+      "Total variance: 0.9000354144670784\n"
      ]
     }
    ],
