--- a/Stats/qtables_stats.ipynb
+++ b/Stats/qtables_stats.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
        " '/home/ipsilva/Repositories/dynamic-projections/Datasets/cartolastd']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +69,7 @@
        "'/home/ipsilva/Repositories/dynamic-projections/Datasets/qtables'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +95,7 @@
        " 'qtables-15.csv']"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -164,16 +164,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "def intrisic_dim(dataframe, target_variance):\n",
+    "    dataframe = StandardScaler().fit_transform(dataframe)\n",
     "    pca = PCA()\n",
     "\n",
-    "    principalComponents = pca.fit_transform(df)\n",
+    "    principalComponents = pca.fit_transform(dataframe)\n",
     "\n",
     "    list_variance = pca.explained_variance_ratio_\n",
     "\n",
@@ -189,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "scrolled": false
    },
@@ -202,8 +204,8 @@
       "Registers per time-step (median): 180.0\n",
       "Registers per time-step (deviation): 0.0\n",
       "Total dimensions: 1200\n",
-      "Intrinsic dimensions: 1\n",
-      "Total variance: 0.9247932862627297\n"
+      "Intrinsic dimensions: 94\n",
+      "Total variance: 0.9001580740658508\n"
      ]
     }
    ],
