Update website with umap.

--- a/Plots/trails-video.ipynb
+++ b/Plots/trails-video.ipynb
@@ -35,7 +35,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dataset_id = 'cartolastd'\n",
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataset_id = 'quickdraw'\n",
     "# os.chdir('..')"
    ]
   },
@@ -45,7 +54,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "projection_paths = pd.read_csv('Metrics/Results/{}.csv'.format(dataset_id), index_col=0).index\n",
+    "projection_paths = pd.read_csv('Metrics/results/{}.csv'.format(dataset_id), index_col=0).index\n",
     "names = projection_paths.str.extract(r'.*/{}-(.*).csv'.format(dataset_id), expand=False) # Clean string"
    ]
   },
@@ -145,9 +154,16 @@
     "n_proj = len(projection_paths)\n",
     "\n",
     "for t in tqdm(range(n_extended)):\n",
-    "    if n_proj < 4:\n",
+    "    if n_proj < 5:\n",
     "        fig, axes = plt.subplots(ncols=n_proj, nrows=1,figsize=(n_proj*5,5))\n",
-    "    else:\n",
+    "    elif n_proj == 9:\n",
+    "        ncols = 5\n",
+    "        nrows = (n_proj-1) // 5 + 1\n",
+    "        fig, axes = plt.subplots(ncols=ncols, nrows=nrows,figsize=(ncols*5,nrows*5))   \n",
+    "        axes = axes.flatten()\n",
+    "        if len(axes) > n_proj:\n",
+    "            [ax.set_visible(False) for ax in axes[n_proj:len(axes)]]\n",
+    "    elif n_proj == 11:\n",
     "        ncols = 4\n",
     "        nrows = (n_proj-1) // 4 + 1\n",
     "        fig, axes = plt.subplots(ncols=ncols, nrows=nrows,figsize=(ncols*5,nrows*5))   \n",
@@ -164,7 +180,7 @@
     "            e_trail = t + 1\n",
     "            points = pos_interp[p][i,b_trail:e_trail]\n",
     "            ax.plot(points[:,0], points[:,1], \n",
-    "                    c=colors[p][i], lw=2, alpha=0.5);\n",
+    "                    c=colors[p][i], lw=2, alpha=0.25);\n",
     "        # Draw scatter\n",
     "        ax.scatter(pos_interp[p][:,t,0], pos_interp[p][:,t,1], \n",
     "                   edgecolors='#000000', s=15, c=colors[p], alpha=0.5, zorder=4);\n",
@@ -184,9 +200,10 @@
     "    # Save current frame\n",
     "    plt.savefig('{}/proj-{}.png'.format(anim_dir, t),\n",
     "                format='png', dpi=80, bbox_inches='tight')\n",
-    "    plt.show()\n",
+    "#     plt.show()\n",
     "    plt.clf()\n",
-    "    plt.close()"
+    "    plt.close()\n",
+    "#     break"
    ]
   },
   {
@@ -238,12 +255,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Remove intermediate files\n",
-    "for i in range(n_extended):\n",
-    "    if i % (n_nans+1) != 0:\n",
-    "        r = 'proj-{}.png'.format(anim_dir, i) \n",
-    "        print('rm ' + r)\n",
-    "        ! rm {r}"
+    "# # Remove intermediate files\n",
+    "# for i in range(n_extended):\n",
+    "#     if i % (n_nans+1) != 0:\n",
+    "#         r = 'proj-{}.png'.format(anim_dir, i) \n",
+    "#         print('rm ' + r)\n",
+    "#         ! rm {r}"
    ]
   }
  ],
