--- a/Metrics/template.ipynb
+++ b/Metrics/template.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "for i in K_VALUES:\n",
     "    metric_ids.append('spat_np_' + str(i))\n",
-    "for i in np.divide(K_VALUES, 4):\n",
+    "for i in range(1,21):\n",
     "    metric_ids.append('spat_nh_' + str(i))\n",
     "for i in K_VALUES:\n",
     "    metric_ids.append('spat_trust_' + str(i))\n",
@@ -342,18 +342,19 @@
     "        for i in range(n_items):\n",
     "            i_class = index_to_class[i]\n",
     "            k_max = int(max(K_VALUES) * n_items)\n",
-    "            ngbr_classes = index_to_class[nbrs_md[i, :k_max]]\n",
-    "            for k_index, k_percentage in enumerate(np.divide(K_VALUES, 4)):\n",
-    "                k = max(int(k_percentage * n_items), 1)  # Avoid divisions by 0\n",
+    "            ngbr_classes = index_to_class[nbrs_md[i, 1:k_max]]\n",
+    "            #for k_index, k_percentage in enumerate(np.divide(K_VALUES, 4)):\n",
+    "            #    k = max(int(k_percentage * n_items), 1)  # Avoid divisions by 0\n",
+    "            for k in range(1,21):\n",
     "                ngbr_classes_of_i_over_k = ngbr_classes[:k]\n",
     "                nh = sum(map(lambda x: x == i_class, ngbr_classes_of_i_over_k)) / float(k)\n",
-    "                ngbr_hit[t][i][k_index] = nh  \n",
+    "                ngbr_hit[t][i][k-1] = nh  \n",
     "\n",
     "        # Compute neighbor preservation for different values of k for each item \n",
     "        for i in range(n_items):\n",
     "            for k_index, k_percentage in enumerate(K_VALUES):\n",
     "                k = max(int(k_percentage * n_items), 1)  # Avoid divisions by 0\n",
-    "                intersection = np.intersect1d(nbrs_nd[i, :k], nbrs_md[i, :k], assume_unique=True)\n",
+    "                intersection = np.intersect1d(nbrs_nd[i, 1:k+1], nbrs_md[i, 1:k+1], assume_unique=True)\n",
     "                ngbr_preservation[t][i][k_index] = len(intersection) / float(k)\n",
     "                \n",
     "        # Compute trustworthiness\n",
@@ -376,9 +377,11 @@
     "    # We get one value per k\n",
     "    for i, k in enumerate(K_VALUES):\n",
     "        metric_results.loc[p]['spat_np_' + str(k)]    = ngbr_preservation[i]\n",
-    "        metric_results.loc[p]['spat_nh_' + str(k/4)]  = ngbr_hit[i]\n",
     "        metric_results.loc[p]['spat_trust_' + str(k)] = trustworthiness[i]\n",
     "        metric_results.loc[p]['spat_cont_' + str(k)]  = continuity[i]\n",
+    "    for i, k in enumerate(range(1,21)):\n",
+    "        metric_results.loc[p]['spat_nh_' + str(k)]  = ngbr_hit[i]\n",
+    "        \n",
     "    \n",
     "    dists_nd_all = np.array(dists_nd_all)\n",
     "    dists_md_all = np.array(dists_md_all)\n",
@@ -399,47 +402,6 @@
     "    metric_results.loc[p]['spat_spearman'] = scipy.stats.spearmanr(dists_nd_all, dists_md_all)[0]\n",
     "    metric_results.loc[p]['spat_kendall']  = scipy.stats.kendalltau(dists_nd_all, dists_md_all)[0]\n",
     "    metric_results.loc[p]['spat_kl']       = scipy.stats.entropy(dists_nd_all, dists_md_all)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "dataset_path = './Datasets/' + dataset_id + '/'\n",
-    "vs_n, indexes, n_revisions = dataset_as_array(dataset_path)\n",
-    "n_items = len(indexes)\n",
-    "\n",
-    "for p in projection_paths:\n",
-    "    # Change axis in projection\n",
-    "    vs_m, _, _ = get_projection_as_array(p)\n",
-    "    vs_m = np.transpose(vs_m, (1,0,2))\n",
-    "    \n",
-    "    # Initialize structures\n",
-    "    index_to_class = np.array([item.split('-')[0] for item in np.array(indexes)])\n",
-    "    dists_nd_all = []\n",
-    "    dists_md_all = [] \n",
-    "    ngbr_hit = np.zeros((n_timesteps, n_items, len(K_VALUES)))\n",
-    "\n",
-    "    for t in tqdm(range(n_timesteps)):\n",
-    "        # Generate list of nearest neighbors for each item in timestep t\n",
-    "        dists_nd, nbrs_nd = NearestNeighbors(n_neighbors=n_items, metric='euclidean',\n",
-    "                                      algorithm='ball_tree').fit(vs_n[t]).kneighbors(vs_n[t])   \n",
-    "        dists_md, nbrs_md = NearestNeighbors(n_neighbors=n_items, metric='euclidean',\n",
-    "                                      algorithm='kd_tree').fit(vs_m[t]).kneighbors(vs_m[t])\n",
-    "        \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# plt.plot(trustworthiness)\n",
-    "# plt.plot(continuity)"
    ]
   },
   {
